# CYK_algorithm

./: CMakeLists.txt  main.cpp  readme.md
CYK_algorithm/: CKYAlgorithm.cpp  CKYAlgorithm.h  CMakeLists.txt
tests/: CKYAlgorithmTestCase.cpp  CMakeLists.txt
